--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -144,6 +144,12 @@
     <ClInclude Include="src\scene\SceneGraph.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="src\pch.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\graphics\camera\CubemapCamera.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\graphics\shader.cpp">
@@ -264,6 +270,12 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="src\scene\SceneGraph.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\pch.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\graphics\camera\CubemapCamera.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
