--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -143,10 +143,9 @@
   <ItemGroup>
     <ClInclude Include="src\graphics\camera\CubemapCamera.h" />
     <ClInclude Include="src\pch.h" />
-    <ClInclude Include="src\scene\SceneGraph.h" />
-    <ClInclude Include="src\scene\SceneNode.h" />
     <ClInclude Include="src\graphics\ibl\EnvironmentProbe.h" />
     <ClInclude Include="src\graphics\ibl\EnvironmentProbeManager.h" />
+    <ClInclude Include="src\scene\Renderable3D.h" />
     <ClInclude Include="src\ui\DebugPane.h" />
     <ClInclude Include="src\ui\Pane.h" />
     <ClInclude Include="src\ui\RuntimePane.h" />
@@ -168,7 +167,7 @@
     <ClInclude Include="src\Defs.h" />
     <ClInclude Include="src\graphics\Skybox.h" />
     <ClInclude Include="src\graphics\renderer\MeshRenderer.h" />
-    <ClInclude Include="src\Scene3D.h" />
+    <ClInclude Include="src\scene\Scene3D.h" />
     <ClInclude Include="src\platform\OpenGL\IndexBuffer.h" />
     <ClInclude Include="src\platform\OpenGL\Buffer.h" />
     <ClInclude Include="src\graphics\mesh\Model.h" />
@@ -203,10 +202,9 @@
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
       </PrecompiledHeaderFile>
     </ClCompile>
-    <ClCompile Include="src\scene\SceneGraph.cpp" />
-    <ClCompile Include="src\scene\SceneNode.cpp" />
     <ClCompile Include="src\graphics\ibl\EnvironmentProbe.cpp" />
     <ClCompile Include="src\graphics\ibl\EnvironmentProbeManager.cpp" />
+    <ClCompile Include="src\scene\Renderable3D.cpp" />
     <ClCompile Include="src\ui\DebugPane.cpp" />
     <ClCompile Include="src\ui\Pane.cpp" />
     <ClCompile Include="src\ui\RuntimePane.cpp" />
@@ -225,7 +223,7 @@
     <ClCompile Include="src\graphics\Skybox.cpp" />
     <ClCompile Include="src\platform\OpenGL\Framebuffers\Framebuffer.cpp" />
     <ClCompile Include="src\graphics\renderer\MeshRenderer.cpp" />
-    <ClCompile Include="src\Scene3D.cpp" />
+    <ClCompile Include="src\scene\Scene3D.cpp" />
     <ClCompile Include="src\platform\OpenGL\IndexBuffer.cpp" />
     <ClCompile Include="src\platform\OpenGL\Buffer.cpp" />
     <ClCompile Include="src\graphics\mesh\Model.cpp" />
