--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -60,7 +60,7 @@
     <ClInclude Include="src\utils\Singleton.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="src\Scene3D.h">
+    <ClInclude Include="src\scene\Scene3D.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="src\graphics\renderer\MeshRenderer.h">
@@ -138,16 +138,13 @@
     <ClInclude Include="src\graphics\ibl\EnvironmentProbeManager.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="src\scene\SceneNode.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="src\scene\SceneGraph.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
     <ClInclude Include="src\pch.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="src\graphics\camera\CubemapCamera.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\scene\Renderable3D.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
@@ -194,7 +191,7 @@
     <ClCompile Include="src\platform\OpenGL\VertexArray.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="src\Scene3D.cpp">
+    <ClCompile Include="src\scene\Scene3D.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="src\graphics\renderer\MeshRenderer.cpp">
@@ -266,16 +263,13 @@
     <ClCompile Include="src\graphics\ibl\EnvironmentProbeManager.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="src\scene\SceneNode.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="src\scene\SceneGraph.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
     <ClCompile Include="src\pch.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="src\graphics\camera\CubemapCamera.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\scene\Renderable3D.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
