--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -147,7 +147,7 @@
     <ClInclude Include="src\pch.h" />
     <ClInclude Include="src\graphics\ibl\EnvironmentProbe.h" />
     <ClInclude Include="src\graphics\ibl\EnvironmentProbeManager.h" />
-    <ClInclude Include="src\scene\Renderable3D.h" />
+    <ClInclude Include="src\scene\RenderableModel.h" />
     <ClInclude Include="src\ui\DebugPane.h" />
     <ClInclude Include="src\ui\Pane.h" />
     <ClInclude Include="src\ui\RuntimePane.h" />
@@ -208,7 +208,7 @@
     </ClCompile>
     <ClCompile Include="src\graphics\ibl\EnvironmentProbe.cpp" />
     <ClCompile Include="src\graphics\ibl\EnvironmentProbeManager.cpp" />
-    <ClCompile Include="src\scene\Renderable3D.cpp" />
+    <ClCompile Include="src\scene\RenderableModel.cpp" />
     <ClCompile Include="src\ui\DebugPane.cpp" />
     <ClCompile Include="src\ui\Pane.cpp" />
     <ClCompile Include="src\ui\RuntimePane.cpp" />
