--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -63,7 +63,7 @@
     <ClInclude Include="src\scene\Scene3D.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="src\graphics\renderer\MeshRenderer.h">
+    <ClInclude Include="src\graphics\renderer\ModelRenderer.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="src\graphics\Skybox.h">
@@ -117,7 +117,7 @@
     <ClInclude Include="src\graphics\texture\Cubemap.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="src\graphics\renderer\RenderPass.h">
+    <ClInclude Include="src\graphics\renderer\renderpass\RenderPassType.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="src\platform\OpenGL\Framebuffers\Framebuffer.h">
@@ -151,6 +151,21 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="src\input\JoystickManager.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\graphics\renderer\MasterRenderer.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\graphics\renderer\renderpass\LightingPass.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\graphics\renderer\renderpass\PostProcessPass.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\graphics\renderer\renderpass\RenderPass.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="src\graphics\renderer\renderpass\ShadowmapPass.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
@@ -200,7 +215,7 @@
     <ClCompile Include="src\scene\Scene3D.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="src\graphics\renderer\MeshRenderer.cpp">
+    <ClCompile Include="src\graphics\renderer\ModelRenderer.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="src\platform\OpenGL\Framebuffers\Framebuffer.cpp">
@@ -282,6 +297,21 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="src\input\JoystickManager.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\graphics\renderer\MasterRenderer.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\graphics\renderer\renderpass\LightingPass.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\graphics\renderer\renderpass\PostProcessPass.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\graphics\renderer\renderpass\RenderPass.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\graphics\renderer\renderpass\ShadowmapPass.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
