添加生成探针的渲染通道

--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -168,6 +168,9 @@
     <ClInclude Include="src\graphics\camera\ICamera.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="src\utils\loaders\ShaderLoader.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\graphics\shader.cpp">
@@ -309,6 +312,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="src\graphics\renderer\renderpass\EnvironmentProbePass.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\utils\loaders\ShaderLoader.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
