--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -340,6 +340,8 @@
     <None Include="src\shaders\oldModel.frag" />
     <None Include="src\shaders\pbr_model.vert" />
     <None Include="src\shaders\pbr_model.frag" />
+    <None Include="src\shaders\lightprobe_convolution.vert" />
+    <None Include="src\shaders\lightprobe_convolution.frag" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\awesomeface.png">
